Enhance help input handling