@@ -2,10 +2,7 @@ package seedu.fitchasers.user;
 
 import seedu.fitchasers.ui.UI;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.Objects;
+import java.util.*;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 
@@ -77,7 +74,7 @@ public class Person {
      * @return A List of WeightRecord objects
      */
     public List<WeightRecord> getWeightHistory() {
-        return Collections.unmodifiableList(new ArrayList<>(weightHistory));
+        return List.copyOf(weightHistory);
     }
 
 
@@ -92,7 +89,7 @@ public class Person {
         }
 
         StringBuilder sb = new StringBuilder();
-        sb.append("Here's your weight, you've been killin' it lately!\n");
+        sb.append("Here's your weight, you've been killing it lately!\n");
 
         for (int i = 0; i < weightHistory.size(); i++) {
             sb.append("  ").append(weightHistory.get(i));
@@ -146,7 +143,7 @@ public class Person {
 
         // Sort records by date ascending
         List<WeightRecord> sortedRecords = new ArrayList<>(weightHistory);
-        sortedRecords.sort((r1, r2) -> r1.getDate().compareTo(r2.getDate()));
+        sortedRecords.sort(Comparator.comparing(WeightRecord::getDate));
 
         List<Double> weights = new ArrayList<>();
         List<String> dates = new ArrayList<>();
@@ -162,9 +159,9 @@ public class Person {
             return;
         }
 
-        final int height = 10;
-        final int spacing = 12;
-        final int maxWidthColumns = 12;
+        int height = 10;
+        int spacing = 12;
+        int maxWidthColumns = 12;
 
         List<Double> displayWeights = new ArrayList<>();
         List<String> displayDates = new ArrayList<>();
@@ -185,11 +182,13 @@ public class Person {
         double max = Collections.max(displayWeights);
         int width = (displayWeights.size() - 1) * spacing + 1;
 
+        if (min == max) {
+            max = min + 1;
+        }
+
         char[][] grid = new char[height][width];
         for (int i = 0; i < height; i++) {
-            for (int j = 0; j < width; j++) {
-                grid[i][j] = ' ';
-            }
+            Arrays.fill(grid[i], ' ');
         }
 
         int[] y = new int[displayWeights.size()];
@@ -215,7 +214,6 @@ public class Person {
             }
         }
 
-
         boolean[][] isWeightPoint = new boolean[height][width];
         for (int i = 0; i < displayWeights.size(); i++) {
             int x = i * spacing;
@@ -225,7 +223,6 @@ public class Person {
                 isWeightPoint[yy][x] = true;
             }
         }
-
 
         final String reset = "\u001B[0m";
         final String orange = "\u001B[1m\u001B[38;5;208m";
@@ -250,6 +247,7 @@ public class Person {
         for (int i = 0; i < height; i++) {
             double label = max - (max - min) * i / (height - 1);
             System.out.printf("%6.1f | ", label);
+            System.out.print(" ");
             for (int j = 0; j < width; j++) {
                 if (isWeightPoint[i][j]) {
                     System.out.print(orange + "\u25CF" + reset);
@@ -260,13 +258,11 @@ public class Person {
             System.out.println();
         }
 
-
         System.out.print("        ");
         for (int j = 0; j < width + 4; j++) {
             System.out.print('_');
         }
         System.out.println();
-
 
         System.out.print("        ");
         for (int i = 0; i < displayDates.size(); i++) {
